--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Loading...</title>
     
-    <meta http-equiv="refresh" content="0; url=login.html">
+    <meta http-equiv="refresh" content="0; url=view/login.html">
     
     <style>
         body {
